# New_Specter

./: .gitignore  CLAUDE.md  PROMPTS.md  README.md
specter-api/: .env.example  .gitignore  CRON.md  _probe_smoke.py  _run_api.py  conftest.py  db.py  main.py  nixpacks.toml  observability.py  pyproject.toml  queue_client.py  railway.toml  rate_limit.py  redis_client.py  requirements-dev.txt  requirements.txt  run_cost_flush.py  run_dispatcher.py  run_proxy_guard.py  run_retention_purge.py  test_db.py
specter-api/alembic/: env.py
specter-api/auth/: admin_auth.py  cron_auth.py  internal_auth.py  plan_gate.py  supabase.py  test_internal_auth.py  test_plan_gate.py  test_supabase_auth.py
specter-api/models/: __init__.py  base.py  competitor_trackings.py  competitor_urls.py  cost_event_sample.py  domain_exclusions.py  merchant_addons.py  merchant_cost_daily.py  merchants.py  notifications.py  oos_alerts.py  price_changes.py  price_snapshots.py  processed_webhook_events.py  scrape_audit.py  signals.py  skus.py  test_cost_models_import.py  tool_calculations.py
specter-api/routers/: alerts.py  attribution.py  billing.py  calculations.py  competitors.py  cost.py  cron.py  health.py  internal.py  merchants.py  notifications.py  products.py  repricing.py  scrape_health.py  signals.py  skus.py  test_billing.py  test_billing_dunning.py  test_billing_idempotency.py  test_calculations.py  test_competitors_reachable.py  test_cors.py  test_cost.py  test_cron.py  test_health.py  test_internal.py  test_internal_cost.py  test_internal_skipwrite.py  test_internal_validation.py  (+9 more)
(+556 files in other folders)
