[project]
name = "specter-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "pydantic>=2.0,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
